# apps/partner-web/app/api/auth/google/challenge/route.ts
@@ -1,0 +1,2 @@
+import { auth } from '../../handlers';
+export const POST = auth.googleChallenge;
