# apps/partner-web/app/api/auth/phone/link/route.ts
@@ -1,0 +1,2 @@
+import { auth } from '../../handlers';
+export const POST = auth.phoneLink;
